--- a/create_user.yml
+++ b/create_user.yml
@@ -1,15 +1,36 @@
 ---
-- hosts: all
 
-  tasks:
-    - name: Load variables
-      include_vars: "vault.yml"
-      no_log: true
+- name: Load variables
+  include_vars: "vault.yml"
+  no_log: true
 
-    - name: Create user account
-      user: name="{{ new_user }}"
-        password="{{ new_user_password }}"
-        state=present
-        append=yes
-        groups=sudo
-        shell="/bin/bash"
+- name: Remove sudo group rights
+  lineinfile: dest=/etc/sudoers regexp="^%sudo" state=absent validate='visudo -cf %s'
+
+- name: Create {{ vault_new_user }} user account
+  user: name={{ vault_new_user }} password={{ vault_new_user_password }} shell=/bin/bash state=present #generate_ssh_key=yes
+
+- name: Add user {{ vault_new_user }} to sudoers
+  action: lineinfile dest=/etc/sudoers regexp="^{{ vault_new_user }} ALL" line="{{ vault_new_user }} ALL=(ALL) ALL" state=present validate="visudo -cf %s"
+
+- name: Ensure public key is in authorized_keys
+  authorized_key:
+    key: "{{ vault_auth_public_key }}"
+    user: "{{ vault_new_user }}"
+
+- name: Update ssh parameters
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    state: present
+    regexp: "^{{ item.key }}"
+    line: "{{ item.key }} {{ item.value }}"
+    insertafter: EOF
+  with_items:
+    - { key: 'Port', value: '22' }
+    - { key: 'PermitRootLogin', value: 'no' }
+    - { key: 'PasswordAuthentication', value: 'no' }
+    - { key: 'LoginGraceTime', value: '20' }
+    - { key: 'X11Forwarding', value: 'no' }
+    - { key: 'AllowUsers', value: '{{ vault_new_user }}' }
+  notify:
+    - restart ssh
