Enable additional security role

--- a/apply_security.yml
+++ b/apply_security.yml
@@ -7,7 +7,7 @@
 
   roles:
     - ansible-os-hardening
-    #- ansible-ssh-hardening
+    - ansible-ssh-hardening
 
   tasks:  
     - name: Install fail2ban
