Add HTTP Basic Auth to certain endpoints with nginx
https://github.com/artemnikitin/ansible-scripts/issues/3

--- a/seedbox_setup_instance.yml
+++ b/seedbox_setup_instance.yml
@@ -23,6 +23,7 @@
   tasks:
     - include: tasks/create_user.yml
     - include: tasks/run_updates.yml
+    - include: tasks/setup_nginx.yml
 
   handlers:
     - include: handlers.yml
