--- a/tasks/setup_nginx.yml
+++ b/tasks/setup_nginx.yml
@@ -18,3 +18,7 @@
   notify:
     - restart nginx
 
+- name: Add HTTP Basic Auth for netdata
+  copy: src=templates/netdata dest=/etc/nginx/sites-enabled/netdata
+  notify:
+    - restart nginx
